--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
     <title>React web application</title>
   </head>
   <body>
+    <p>Test</p>
     <div id="app"></div>
     <script src="bundle.js"></script>
   </body>
